tth-sdo/main/default/objects/Opportunity/fields/AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>AutoNumber__c</fullName>
    <displayFormat>{0000}</displayFormat>
    <inlineHelpText>This is used in an equation to generate a random number</inlineHelpText>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>