tth-sdo/main/default/objects/Opportunity/fields/Budget_Approved__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Sales Path</description>
    <label>Budget Approved</label>
    <type>Checkbox</type>
</CustomField>