tth-sdo/main/default/objects/Opportunity/fields/Close_Plan__c.field-meta.xml
<CustomField>
    <fullName>Close_Plan__c</fullName>
    <label>Close Plan</label>
    <type>Url</type>
</CustomField>