tth-sdo/main/default/objects/Opportunity/fields/Coaching__c.field-meta.xml
<CustomField>
    <fullName>Coaching__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coaching</label>
    <referenceTo>WorkCoaching</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>