tth-sdo/main/default/objects/Opportunity/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <description>Used for deal registration.</description>
    <label>Competition</label>
    <length>80</length>
    <type>Text</type>
</CustomField>