tth-sdo/main/default/objects/Opportunity/fields/Competitive_Coach__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Coach__c</fullName>
    <formula>CASE( Competitor__c ,&quot;Competitor A&quot;,  HYPERLINK(&quot;/resource/1266967954000/Competitive_Product_Comparison&quot;, &quot;Competitor A Overview&quot; &amp; BR() &amp; &quot;Case Studies vs. Competitor A &quot; &amp; BR() &amp; &quot;Competitor A Comparison Matrix&quot; , &quot;_blank&quot;),&quot;Competitor B&quot;,HYPERLINK(&quot;/resource/1266967954000/Competitive_Product_Comparison&quot;, &quot;Competitor B Overview&quot; &amp; BR() &amp; &quot;Case Studies vs. Competitor B &quot; &amp; BR() &amp; &quot;Competitor B Comparison Matrix&quot; , &quot;_blank&quot;),&quot;Competitor C&quot;, HYPERLINK(&quot;/resource/1266967954000/Competitive_Product_Comparison&quot;, &quot;Competitor C Overview&quot; &amp; BR() &amp; &quot;Case Studies vs. Competitor C &quot; &amp; BR() &amp; &quot;Competitor C Comparison Matrix&quot; , &quot;_blank&quot;), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competitive Coach</label>
    <type>Text</type>
</CustomField>