tth-sdo/main/default/objects/Opportunity/fields/Competitive_Deal__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitive Deal</label>
    <type>Checkbox</type>
</CustomField>