tth-sdo/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <label>Competitor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Competitor A</fullName>
            </value>
            <value>
                <fullName>Competitor B</fullName>
            </value>
            <value>
                <fullName>Competitor C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>