tth-sdo/main/default/objects/Opportunity/fields/Complete_ROI_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Complete_ROI_Analysis__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Sales Path</description>
    <label>Complete ROI Analysis</label>
    <type>Checkbox</type>
</CustomField>