tth-sdo/main/default/objects/Opportunity/fields/Contact_City__c.field-meta.xml
<CustomField>
    <fullName>Contact_City__c</fullName>
    <label>Contact City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>