tth-sdo/main/default/objects/Opportunity/fields/Contact_Company__c.field-meta.xml
<CustomField>
    <fullName>Contact_Company__c</fullName>
    <label>Contact Company</label>
    <length>80</length>
    <type>Text</type>
</CustomField>