tth-sdo/main/default/objects/Opportunity/fields/Contact_Country__c.field-meta.xml
<CustomField>
    <fullName>Contact_Country__c</fullName>
    <label>Contact Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>