tth-sdo/main/default/objects/Opportunity/fields/Contact_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Contact_Postal_Code__c</fullName>
    <label>Contact Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>