tth-sdo/main/default/objects/Opportunity/fields/Contact_State_Province__c.field-meta.xml
<CustomField>
    <fullName>Contact_State_Province__c</fullName>
    <label>Contact State Province</label>
    <length>40</length>
    <type>Text</type>
</CustomField>