tth-sdo/main/default/objects/Opportunity/fields/Contact_Street__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street__c</fullName>
    <label>Contact Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>