tth-sdo/main/default/objects/Opportunity/fields/Contact_Title__c.field-meta.xml
<CustomField>
    <fullName>Contact_Title__c</fullName>
    <label>Contact Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>