tth-sdo/main/default/objects/Opportunity/fields/cv__c.field-meta.xml
<CustomField>
    <fullName>cv__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cv</label>
    <type>Checkbox</type>
</CustomField>