tth-sdo/main/default/objects/Opportunity/fields/Days_Left_Until_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_Left_Until_Expire__c</fullName>
    <formula>if(ISNULL(Registration_Expiration__c),0, if(Registration_Expiration__c - TODAY() &gt;0, Registration_Expiration__c - TODAY(),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Left Until Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>