tth-sdo/main/default/objects/Opportunity/fields/Deal_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Approved_Date__c</fullName>
    <label>Deal Approved Date</label>
    <type>Date</type>
</CustomField>