tth-sdo/main/default/objects/Opportunity/fields/Deal_Forward__c.field-meta.xml
<CustomField>
    <fullName>Deal_Forward__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deal Forward</label>
    <type>Checkbox</type>
</CustomField>