tth-sdo/main/default/objects/Opportunity/fields/Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Deal_ID__c</fullName>
    <description>Used for deal registrations</description>
    <label>Deal ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>