tth-sdo/main/default/objects/Opportunity/fields/Deal_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Source__c</fullName>
    <description>Used for deal registration.</description>
    <label>Deal Source</label>
    <length>80</length>
    <type>Text</type>
</CustomField>