tth-sdo/main/default/objects/Opportunity/fields/Demo_Presentation_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Presentation_Date__c</fullName>
    <description>Used for Sales Path</description>
    <label>Demo Presentation Date</label>
    <type>Date</type>
</CustomField>