tth-sdo/main/default/objects/Opportunity/fields/Discount_Approved__c.field-meta.xml
<CustomField>
    <fullName>Discount_Approved__c</fullName>
    <label>Discount Approved</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>