tth-sdo/main/default/objects/Opportunity/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <description>Used for deal registration.</description>
    <label>Distributor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>