tth-sdo/main/default/objects/Opportunity/fields/ED_Close_Date_Delta__c.field-meta.xml
<CustomField>
    <fullName>ED_Close_Date_Delta__c</fullName>
    <formula>ED_Predicted_Close_Date__c - CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the number of days before or after the close date the opportunity is predicted to close.  It is calculated by subtracting the Close Date from the Predicted Close Date.</inlineHelpText>
    <label>ED Close Date Delta</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>