tth-sdo/main/default/objects/Opportunity/fields/ED_Outcome__c.field-meta.xml
<CustomField>
    <fullName>ED_Outcome__c</fullName>
    <inlineHelpText>This is the number of DAYS after the Created Date that this opportunity is targeted to close.</inlineHelpText>
    <label>ED Predicted Time to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>