tth-sdo/main/default/objects/Opportunity/fields/ED_Prescription__c.field-meta.xml
<CustomField>
    <fullName>ED_Prescription__c</fullName>
    <label>ED Prescription</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>