tth-sdo/main/default/objects/Opportunity/fields/Engage_Legal__c.field-meta.xml
<CustomField>
    <fullName>Engage_Legal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Sales Path</description>
    <label>Engage Legal</label>
    <type>Checkbox</type>
</CustomField>