tth-sdo/main/default/objects/Opportunity/fields/Forwarded_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Forwarded_Lead_ID__c</fullName>
    <description>The field is updated with a lead id when the opportunity details are forwarded to a partner as a lead.</description>
    <label>Forwarded Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>