tth-sdo/main/default/objects/Opportunity/fields/Implementation_Start__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Start__c</fullName>
    <label>Implementation Start</label>
    <type>Date</type>
</CustomField>