tth-sdo/main/default/objects/Opportunity/fields/Internal_Pricing_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Internal_Pricing_Approvals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for Sales Path</description>
    <label>Internal Pricing Approvals</label>
    <type>Checkbox</type>
</CustomField>