tth-sdo/main/default/objects/Opportunity/fields/Intial_Estimated_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Intial_Estimated_Close_Date__c</fullName>
    <description>Used for deal registration.</description>
    <label>Initial Estimated Close Date</label>
    <type>Date</type>
</CustomField>