tth-sdo/main/default/objects/Opportunity/fields/LastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>LastActivityDate__c</fullName>
    <label>Last Activity</label>
    <type>Date</type>
</CustomField>