tth-sdo/main/default/objects/Opportunity/fields/Manager_Forecast_Judgement__c.field-meta.xml
<CustomField>
    <fullName>Manager_Forecast_Judgement__c</fullName>
    <label>Manager Forecast Judgement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>UP +</fullName>
            </value>
            <value>
                <fullName>UP -</fullName>
            </value>
            <value>
                <fullName>OUT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>