tth-sdo/main/default/objects/Opportunity/fields/Manager_Forecast_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Forecast_Notes__c</fullName>
    <label>Manager Forecast Notes</label>
    <type>TextArea</type>
</CustomField>