tth-sdo/main/default/objects/Opportunity/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <description>Used by Einstein Voice Assistant instead of the standard Next Step field.</description>
    <label>Next Steps</label>
    <type>TextArea</type>
</CustomField>