tth-sdo/main/default/objects/Opportunity/fields/Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for the &quot;Partner Opportunities&quot; related list on Partner Account records.</description>
    <label>Partner Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Opportunities</relationshipLabel>
    <relationshipName>PartnerOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>