tth-sdo/main/default/objects/Opportunity/fields/Project_Budget__c.field-meta.xml
<CustomField>
    <fullName>Project_Budget__c</fullName>
    <description>Used for deal registration.</description>
    <label>Project Budget</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>