tth-sdo/main/default/objects/Opportunity/fields/Project_Budgeted__c.field-meta.xml
<CustomField>
    <fullName>Project_Budgeted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for deal registration.</description>
    <label>Project Budgeted?</label>
    <type>Checkbox</type>
</CustomField>