tth-sdo/main/default/objects/Opportunity/fields/Project_Description__c.field-meta.xml
<CustomField>
    <fullName>Project_Description__c</fullName>
    <label>Project Description</label>
    <type>TextArea</type>
</CustomField>