tth-sdo/main/default/objects/Opportunity/fields/Project_Manager_Contact__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Sales Path</description>
    <label>Project Manager Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>