tth-sdo/main/default/objects/Opportunity/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>