tth-sdo/main/default/objects/Opportunity/fields/Projected_Durations__c.field-meta.xml
<CustomField>
    <fullName>Projected_Durations__c</fullName>
    <formula>Round(Projected_Finish__c - Implementation_Start__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Projected Durations</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>