tth-sdo/main/default/objects/Opportunity/fields/Projected_Finish__c.field-meta.xml
<CustomField>
    <fullName>Projected_Finish__c</fullName>
    <label>Projected Finish</label>
    <type>Date</type>
</CustomField>