tth-sdo/main/default/objects/Opportunity/fields/Random_Number__c.field-meta.xml
<CustomField>
    <fullName>Random_Number__c</fullName>
    <formula>1 + MOD( VALUE(AutoNumber__c) * 12345678 , 10000)/100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Random Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>