tth-sdo/main/default/objects/Opportunity/fields/Registration_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Registration_Expiration__c</fullName>
    <description>Date the deal registration expires</description>
    <label>Registration Expiration</label>
    <type>Date</type>
</CustomField>