tth-sdo/main/default/objects/Opportunity/fields/Status_Value__c.field-meta.xml
<CustomField>
    <fullName>Status_Value__c</fullName>
    <formula>IF( CloseDate_TODAY__c &gt;0, &quot;good&quot;, &quot;bad&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Value</label>
    <type>Text</type>
</CustomField>