tth-sdo/main/default/objects/Opportunity/fields/View_Forwarded_Lead__c.field-meta.xml
<CustomField>
    <fullName>View_Forwarded_Lead__c</fullName>
    <formula>if(Deal_Forward__c, HYPERLINK( &quot;/&quot; &amp; Forwarded_Lead_ID__c, &quot;View Forwarded Lead&quot;, &quot;_self&quot;),&quot;Not Forwarded&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Forwarded Lead</label>
    <type>Text</type>
</CustomField>