tth-sdo/main/default/objects/Opportunity/validationRules/Reason_Lost_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Lost_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND (  ISPICKVAL( StageName, &quot;Closed Lost&quot;), ISPICKVAL( Reason_Lost__c , &quot;&quot;)   )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>If the stage equals closed - lost, then the reason lost is a required field.</errorMessage>
</ValidationRule>