tth-sdo/main/default/objects/Opportunity/listViews/AllOpenOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpenOpportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.SimpleOpportunity</value>
    </filters>
    <label>My Opportunities</label>
</ListView>