tth-sdo/main/default/objects/Opportunity/listViews/MyOpportunitiesPartner.listView-meta.xml
<ListView>
    <fullName>MyOpportunitiesPartner</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Deals</label>
    <language>en_US</language>
    <sharedTo>
        <allPartnerUsers/>
    </sharedTo>
</ListView>