tth-sdo/main/default/objects/Opportunity/listViews/Partner_Opportunities.listView-meta.xml
<ListView>
    <fullName>Partner_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>PARTNER.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARTNER.NAME</field>
        <operation>contains</operation>
        <value>Partners,Resellers,Distributors</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>notEqual</operation>
        <value>1</value>
    </filters>
    <label>Partner Opportunities</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers/>
        <group>Channel_Managers</group>
    </sharedTo>
</ListView>